Test: RecruitIntegrationTest - 환자 및 경로 정보 값 확인 테스트 추가